<resources>
    <string name="app_name">Mölkky</string>
    <string name="settings">Asetukset</string>
    <string name="start">Aloita peli</string>
    <string name="random">Arvo heittojärjestys</string>
    <string name="insert_player">Lisää uusi pelaaja</string>
    <string name="choose_player">Valitse pelaajat:</string>
    <string name="first">%1$s heittää ensimmäisenä.</string>
    <string name="no_saved_players">Ei tallennettuja pelaajia.</string>
    <string name="no_saved_games">Ei tallennettuja pelejä.</string>
    <string name="already_added">%1$s on jo lisätty.</string>
    <string name="fetched_from_database">%1$s haettiin tietokannasta.</string>
    <string name="ok">OK</string>
    <string name="cancel">Peruuta</string>
    <string name="dash">-</string>
    <string name="add">Lisää</string>
    <string name="confirm">Valmis</string>
    <string name="yes">kyllä</string>
    <string name="no">ei</string>
    <string name="points_to_win">Voitto heittämällä %1$d</string>
    <string name="scorecard_toss">heitto %1$d:</string>
    <string name="new_game">Uusi peli</string>
    <string name="start_new_game">Aloita uusi peli</string>
    <string name="congratulations">%1$s on voittanut pelin. Onneksi olkoon!</string>
    <string name="toss">heitto </string>
    <string name="hits">osumat </string>
    <string name="mean">keskiarvo </string>
    <string name="excesses">ylitykset </string>
    <string name="elimination">putoaminen </string>
    <string name="eliminations">putoamiset</string>
    <string name="games">pelit</string>
    <string name="wins">voitot</string>
    <string name="points">pisteet</string>
    <string name="tosses">heitot</string>
    <string name="winning_chances">voitto mahdollisuudet</string>
    <string name="points_per_toss">pisteet/heitto</string>
    <string name="hits_percentage">osuma%</string>
    <string name="elimination_percentage">putoamis%</string>
    <string name="excesses_per_game">ylitykset/peli</string>
    <string name="saved_games">Tallennetut pelit</string>
    <string name="stats">Tilastot</string>
    <string name="show_all_games">Näytä kaikki pelit</string>
    <string name="show_all_time_stats">kaikkien aikojen tilastot</string>
    <string name="show_games">Näytä pelit</string>
    <string name="chart">kuvaaja</string>
    <string name="seekbar_instruction">Valitse pisteet liu\"uttamalla kapulaa</string>
    <string name="rules">Säännöt</string>
    <string name="show_images">Näytä kuvat</string>
    <string name="hide_images">Piilota kuvat</string>
    <string name="rules_content">Pisteiden lasku:\n\nYksi kaatunut keila: keilaan merkitty numero\nUseampi kaatunut keila: kaatuneiden keilojen lukumäärä.\nKeilaa ei lasketa kaatuneeksi, jos se nojaa toiseen keilaan tai heittokapulaan.\nKaatuneet keilat nostetaan samaan paikkaan, johon ne ovat kaatuneet.\n\nPelin kulku: \n\nPeli päättyy, kun pelaaja saavuttaa 50 pistettä. Jos 50 pistettä ylittyy, pelaajan pisteet lasketaan 25 pisteeseen. Kolme peräkkäistä nollaa heittänyt pelaaja putoaa pelistä.\n\nHeittolinja: 3-4 metriä muodostelmasta.</string>
    <string name="source">Lähde: https://www.molkky.com/wp/saannot/</string>
    <string name="confirm_changes">Vahvista muutokset</string>
    <string name="use_cloud_database">Käytä pilvitietokantaa</string>
    <string name="database_id">Tietokannan tunnus</string>
    <string name="database_instruction">Voit käyttää ystäviesi kanssa samaa tietokantaa asettamalla yhteisen tunnuksen.</string>
    <string name="too_short_id">Liian lyhyt tunnus</string>
    <string name="database_connection_failed">Yhdistäminen tietokantaan epäonnistui. Tarkista internet-yhteys.</string>
    <string name="database_created">Uusi pilvitietokanta luotu.</string>
    <string name="database_not_found">Tietokantaa ei löytynyt.</string>
    <string name="database_found">Tietokanta löydetty.</string>
    <string name="database_changed">Tietokanta vaihdettu.</string>
    <string name="database_game_added">Peli lisätty tietokantaan</string>
    <string name="database_game_added_failed">Pelin lisääminen pilvitietokantaan epäonnistui.</string>
    <string name="database_connected">Yhdistetty tietokantaan.</string>
    <string name="something_went_wrong">Jokin meni vikaan.</string>
    <string name="users">käyttäjät</string>
    <string name="players">pelaajat</string>
    <string name="created">luotu</string>
    <string name="updated">päivitetty</string>
    <string name="spectate">Seuraa peliä</string>
    <string name="spectator_mode_start">Pelinseuranta käynnissä.</string>
    <string name="spectator_mode_error">Pelinseuranta ei onnistunut.</string>
    <string name="move_player_instructions">Vaihda heittojärjestystä painamalla pelaajaa pidempään.</string>
    <string name="set_code">Aseta pelin koodi.</string>
    <string name="spectate_instructions">Koodi löytyy pelinäkymän vasemmasta alakulmasta.</string>
    <string name="select_players">Valitse pelaajat</string>
    <string name="name">nimi</string>
    <string name="game_not_found">Peliä ei löytynyt</string>
    <string name="signin_failed">Kirjautuminen palvelimelle epäonnistui. Pelien tallennus ei ole käytössä.</string>
    <string name="livegame_eror">Pelin seuraaminen ei käytössä.</string>
    <string name="change_name">Vaihda nimi</string>
    <string name="save">Tallenna</string>
    <string name="name_already_in_database">Nimi on käytössä</string>
    <string name="new_picture">Uusi kuva</string>
    <string name="picture_upload_failed">Kuvan lisääminen epäonnistui.</string>

</resources>